--- a/angular/5-diretivas.html
+++ b/angular/5-diretivas.html
@@ -19,6 +19,7 @@
                     //                    controller: function ($scope) {},
                     //                    transclude: true,
                     //                    scope: {},
+                    //                    compile: function ($scope, $el) {}
                     //                    link: function ($scope, $el) {}
                 }
             });
